Query api, resolvers list handling
Signed-off-by: Stefan <stbischof@bipolis.org>